--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -24,7 +24,7 @@
     font: inherit;
     cursor: pointer;
     background-color: transparent;
-    border: 1px solid #8a2b06;
+    border: 1px solid #256ca5;
     padding: 0.5rem 2rem;
     border-radius: 25px;
     margin-left: 1rem;
@@ -32,17 +32,17 @@
   
   .actions button:hover,
   .actions button:active {
-    background-color: #5a1a01;
-    border-color: #5a1a01;
+    background-color: #256ca5;
+    border-color: #256ca5;
     color: white;
   }
   
   .actions .button--alt {
-    color: #8a2b06;
+    color: #256ca5;;
   }
   
   .actions .button {
-    background-color: #8a2b06;
+    background-color: #256ca5;;
     color: white;
   }
   
