--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
     position: fixed;
     top: 0;
     left: 0;
@@ -26,4 +26,78 @@
     height: 100%;
     object-fit: cover;
     transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
+  } */
+
+  .header {
+    width: 100%;
+    height: 5rem;
+    display: flex;
+    padding: 0 10%;
+    justify-content: space-between;
+    align-items: center;
+    /* background-color: peru */
+    background-color: #256ca5;
+  
   }
+  
+  
+  .logo {
+    font-size: 2rem;
+    color: white;
+  }
+  
+  .nav ul {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .nav li {
+    margin-left: 1.5rem;
+    font-size: 1.25rem;
+  }
+  
+  .nav a {
+    text-decoration: none;
+    color: rgb(68, 67, 64)
+  }
+  
+  .nav a:hover,
+  .nav a:active,
+  .nav a.active {
+    color: rgb(222, 230, 231)
+  }
+  
+  .header button {
+    font: inherit;
+    background-color: transparent;
+    border: 1px solid white;
+    color: white;
+    font-weight: bold;
+    padding: 0.3rem 1rem;
+    border-radius: 3px;
+    cursor: pointer;
+  }
+  
+  .header button:hover {
+    background-color: rgb(179, 189, 202);
+    color: rgb(68, 67, 64)
+  }
+
+  .main-image {
+    width: 100%;
+    height: 25rem;
+    z-index: 0;
+    overflow: hidden;
+  }
+  
+  .main-image img {
+    width: 110%;
+    height: 100%;
+    object-fit: cover;
+    transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
+  } 
+  
+  
+  
