--- a/src/components/Meals/MealsSummary.module.css
+++ b/src/components/Meals/MealsSummary.module.css
@@ -15,8 +15,14 @@
   .summary h2 {
     font-size: 2rem;
     margin-top: 0;
+    color: rgb(9, 199, 63);
+    
   }
 
-  .summary h3{
+  .summary h4{
     color: red;
   }
+
+  /* .summary h3 {
+    color: rgb(9, 199, 63);
+  } */
