--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -1,32 +1,3 @@
-/* .header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 5rem;
-    background-color: #256ca5;
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 10%;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-    z-index: 10;
-  }
-  
-  .main-image {
-    width: 100%;
-    height: 25rem;
-    z-index: 0;
-    overflow: hidden;
-  }
-  
-  .main-image img {
-    width: 110%;
-    height: 100%;
-    object-fit: cover;
-    transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
-  } */
 
   .header {
     width: 100%;
@@ -36,7 +7,8 @@
     justify-content: space-between;
     align-items: center;
     /* background-color: peru */
-    background-color: #256ca5;
+    /* background-color: #256ca5; */
+    background-color: rgb(205, 52, 52);
   
   }
   
@@ -51,17 +23,19 @@
     display: flex;
     margin: 0;
     padding: 0;
-    margin-left: 35rem;
+    margin-left: 20rem;
   }
   
   .nav li {
+    /* margin-top: 2rem; */
     margin-left: 1.5rem;
     font-size: 1.25rem;
   }
   
   .nav a {
     text-decoration: none;
-    color: rgb(68, 67, 64)
+    /* color: rgb(68, 67, 64) */
+    color: white;
   }
   
   .nav a:hover,
@@ -80,11 +54,14 @@
     /* border-radius: 3px; */
     border-radius: 20px;
     cursor: pointer;
+    margin-top: 1.5rem;
   }
   
   .header button:hover {
-    background-color: rgb(179, 189, 202);
-    color: rgb(68, 67, 64)
+    /* background-color: rgb(179, 189, 202); */
+    /* color: rgb(68, 67, 64) */
+    background-color: rgb(219, 136, 136);
+    color: rgb(205, 52, 52);
   }
 
   .main-image {
