--- a/src/components/Meals/MealItem/MealItem.module.css
+++ b/src/components/Meals/MealItem/MealItem.module.css
@@ -17,6 +17,7 @@
   .price {
     margin-top: 0.25rem;
     font-weight: bold;
-    color: #256ca5;
+    /* color: #256ca5; */
+    color: rgb(9, 199, 63);
     font-size: 1.25rem;
   }
