--- a/src/components/auth/AuthForm.module.css
+++ b/src/components/auth/AuthForm.module.css
@@ -3,7 +3,8 @@
     width: 95%;
     max-width: 25rem;
     border-radius: 6px;
-    background-color: #256ca5;
+    /* background-color: #256ca5; */
+    background-color: rgb(9, 199, 63);
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
     padding: 1rem;
     text-align: center;
@@ -29,7 +30,8 @@
   .control input {
     font: inherit;
     background-color: rgb(227, 219, 211);
-    color:  #256ca5;
+    /* color:  #256ca5; */
+    color: rgb(9, 199, 63);
     border-radius: 4px;
     border: 1px solid white;
     width: 100%;
@@ -48,26 +50,34 @@
     cursor: pointer;
     font: inherit;
     color: white;
-    background-color:rgb(157, 186, 222);
-    border: 1px solid rgb(157, 186, 222);
+    /* background-color:rgb(157, 186, 222); */
+    /* border: 1px solid rgb(157, 186, 222); */
+    background-color: rgb(205, 52, 52);
+    border: 1px solid rgb(205, 52, 52);
     border-radius: 4px;
     padding: 0.5rem 2.5rem;
   }
   
   .actions button:hover {
-    background-color: #256ca5;
-    border-color:  #256ca5;
+    background-color:  rgb(9, 199, 63);
+    border-color:  rgb(9, 199, 63);
+    /* background-color: #256ca5;
+    border-color:  #256ca5; */
   }
   
   .actions .toggle {
     margin-top: 1rem;
     background-color: transparent;
-    color: rgb(157, 186, 222);
+    /* color: rgb(157, 186, 222); */
+    color : white;
     border: none;
     padding: 0.15rem 1.5rem;
   }
   
   .actions .toggle:hover {
     background-color: transparent;
-    color: rgb(157, 186, 222);
+    /* color: rgb(157, 186, 222); */
+    color: white;
   }
+
+ 
