final changes before deploy app on firebase

--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -23,13 +23,15 @@
     display: flex;
     margin: 0;
     padding: 0;
-    margin-left: 20rem;
+    margin-left: 15rem;
   }
   
   .nav li {
     /* margin-top: 2rem; */
-    margin-left: 1.5rem;
+    margin-left: 1rem;
     font-size: 1.25rem;
+    margin-right: 0.5rem;
+    margin-top: 0.5rem;
   }
   
   .nav a {
@@ -52,7 +54,7 @@
     font-weight: bold;
     padding: 0.3rem 1rem;
     /* border-radius: 3px; */
-    border-radius: 20px;
+    border-radius: 30px;
     cursor: pointer;
     margin-top: 1.5rem;
   }
