--- a/src/components/Layout/HeaderCartButton.module.css
+++ b/src/components/Layout/HeaderCartButton.module.css
@@ -2,7 +2,7 @@
   cursor: pointer;
   font: inherit;
   border: none;
-  background-color: #256ca5;
+  background-color:rgb(205, 52, 52);
   color: white;
   padding: 0.75rem 3rem;
   display: flex;
@@ -10,11 +10,12 @@
   align-items: center;
   border-radius: 25px;
   font-weight: bold;
+  /* margin-left: 1rem; */
 }
 
 .button:hover,
 .button:active {
-  background-color: #83c3f8;
+  background-color: rgb(219, 136, 136);
 }
 
 .icon {
